--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,3 +1,4 @@
 .header {
+	min-width: 1000px;
 	position: relative;
 }
