--- a/src/pages/Product/style.scss
+++ b/src/pages/Product/style.scss
@@ -3,7 +3,8 @@
 @import "@styles/_function.scss";
 
 .product {
-    @include grid(1fr, minmax(192px, 20%) minmax(629px, 1fr) 315px);
+    @include grid(1fr, minmax(192px, 20%) minmax(386px, 1fr) 315px);
+    min-width: 1000px;
     max-width: 1500px;
     margin: 0 auto;
     padding: getVar("padding.p-3.5") getVar("padding.p-4");
